# Book-Writer

./: README.md  docker-compose.yml  main.py  pyproject.toml
backend/: Dockerfile
backend/app/: main.py
backend/app/agents/: crew_setup.py  designer_agent.yaml  reviewer_agent.yaml  writer_agent.yaml
backend/app/agents/prompts/: designer_prompt.txt  reviewer_prompt.txt  writer_prompt.txt
backend/app/api/: routes_agents.py  routes_books.py  routes_health.py  routes_workflows.py
backend/app/config/: agents.yaml  tasks.yaml
backend/app/crew_ai/: crew_setup.py
backend/app/db/: database.py  faiss_handler.py  models.py
backend/app/services/: book_service.py
backend/app/utils/: config.py  embedding_utils.py  file_manager.py  logger.py
backend/app/workflows/: workflow_runner.py
frontend/: Dockerfile  README.md  package.json
frontend/public/: index.html
frontend/src/: App.js  index.js  styles.css
frontend/src/components/: BookGenerator.js
